Fixed currency plot overflow bug

--- a/api/static/styles.css
+++ b/api/static/styles.css
@@ -24,15 +24,21 @@ h1 {
   color: white;
 }
 
+header {
+  height: 100%;
+  line-height: 0;
+  width: auto;
+}
+
 h3 {
   margin-left: 16px;
 }
 
-.header {
-  background-image: url('img/Banner.png');
-  background-size: cover;
-  background-position: center;
-  height: 100px;
+.banner {
+  width: 100%;
+  height: auto;
+  display: block;
+  display: block;
 }
 
 nav {
